# HomeRobot

./: .gitignore  GEMINI.md  Makefile  README.md  patch.sh  platformio.ini  secrets-example.h  shell.nix
include/: definitions.h  secrets-example.h  sensors.h
proto/: messages.options  messages.proto
robot/: esp32-c6-devkitc-1.json  huge_app.csv  migrate-arduino-to-zephyr.md  pioinstaller-state.json  platformio.ini  sdkconfig.esp32-c6-devkitc-1  shell.nix
robot/lib/Motor_PID/: README.md  library.properties
robot/lib/Motor_PID/src/: Motor_PID.cpp  Motor_PID.h
robot/src/: definitions.cpp  definitions.h  main.cpp  secrets-example.h  state_machine.cpp  state_machine.h  utils.cpp  utils.h
robot/src/actuator/: motor.cpp  motor.h
robot/src/actuator/Motor_PID/: Motor_PID.cpp  Motor_PID.h
robot/src/communication/: net_client.h  packet_types.h  protocol.cpp  protocol.h  wifi_client_adapter.h
robot/src/sensors/: battery.cpp  battery.h  imu.cpp  imu.h  lidar.cpp  lidar.h  sensor.cpp  sensor.h
robot/src/utils/: utils.cpp  utils.h
robot/test/: protocol_test.cpp
robot/test/test_communication/: fake_client.cpp  fake_client_test.cpp  receive_packet_test.cpp
robot/tools/: pid.py
server/: AGENT.md  Cargo.toml  build.rs  shell.nix
server/src/: command.rs  connection.rs  constants.rs  input.rs  main.rs  main_old.rs  main_window.ui  reader.rs  sender.rs  sensors.rs  stats.rs
server/src/gui/: lidar.rs  mod.rs
server/src/sensors/: imu.rs  lidar.rs
src/: definitions.cpp  definitions.h  main.cpp  protocol.cpp  robot_esp.cpp.old  sensors.cpp  utils.cpp  utils.h
src/communication/: protocol.h
src/sensors/: battery.cpp  battery.h  imu.cpp  imu.h  lidar.cpp  lidar.h
test/: protocol_test.cpp
tools/: gy87.cpp  i2c_scanner.cpp  imc_20498.cpp  lidar.c  read_esp32_logs.sh
zephyr-port/robot_app/: AGENT.md  CMakeLists.txt  prj.conf  prj_minimal.conf
zephyr-port/robot_app/boards/: esp32c6_devkitc_esp32c6_hpcore.overlay
zephyr-port/robot_app/drivers/: Kconfig
zephyr-port/robot_app/drivers/rmt_tx/: CMakeLists.txt
zephyr-port/robot_app/drivers/rmt_tx/esp32/: CMakeLists.txt
zephyr-port/robot_app/dts/: led-overlay.dtsi
zephyr-port/robot_app/dts/bindings/: espressif,esp32-rmt-tx.yaml
zephyr-port/robot_app/include/zephyr/drivers/: rmt_tx.h
zephyr-port/robot_app/src/: constants.h  diagnostic.cpp  diagnostic.h  main.c  main.cpp  robot.cpp  robot.h  secrets-example.h  secrets.h
zephyr-port/robot_app/src/actuator/: motor.cpp  motor.h  status_led.cpp  status_led.h
zephyr-port/robot_app/src/communication/: net_client.h  protobuf_handler.cpp  protobuf_handler.h  wifi_manager.cpp  wifi_manager.h  zephyr_net_client.cpp  zephyr_net_client.h
zephyr-port/robot_app/src/sensors/: battery.cpp  battery.h  encoders.cpp  encoders.h  imu.cpp  imu.h  lidar.cpp  lidar.h  pcnt_reader.c  pcnt_reader.h
zephyr-port/zephyr_led_app/: .gitignore  CMakeLists.txt  README.md  complete_solution.md  prj.conf
zephyr-port/zephyr_led_app/boards/: esp32c6_devkitc_esp32c6_hpcore.overlay  esp32s3_devkitc_esp32s3_procpu.overlay
zephyr-port/zephyr_led_app/drivers/: CMakeLists.txt
zephyr-port/zephyr_led_app/drivers/rmt_tx/esp32/: rmt_tx_esp32.c  rmt_tx_esp32_channel.c
zephyr-port/zephyr_led_app/src/: main.c  main.c.backup
zephyr-port/zephyr_led_app/test/: CMakeLists.txt  testcase.yaml
zephyr-port/zephyr_led_app/test/src/: test_main.c
zephyr-port/zephyr_led_app/zephyr/: module.yaml
