[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
circular-buffer = "1.2.0"
mockall = "0.13.1"
sdl2 = "0.38.0"
prost = "0.13"

[build-dependencies]
prost-build = "0.13"

# [dependencies.gtk]
# package = "gtk4"
# version = "0.9.6"
# features = ["v4_16"]
# 
# [dependencies.gtk-sys]
# package = "gtk4-sys"
# version = "0.9.6"
# features = ["v4_16"]
# 
# [dependencies.gdk]
# package = "gdk4"
# version = "0.9.6"
# features = ["v4_16"]
