[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
circular-buffer = "1.2.0"
mockall = "0.13.1"
sdl2 = "0.38.0"
prost = "0.13"
ctrlc = "3.4"
indicatif = "0.17"
signal-hook = "0.4.3"
libc = "0.2.183"
crossterm = "0.29.0"
gtk4 = { version = "0.9.6", features = ["v4_16"] }
gdk4 = "0.9.6"
glib = "0.20"
cairo-rs = "0.20"
lazy_static = "1.5"

[build-dependencies]
prost-build = "0.13"

# [dependencies.gtk]
# package = "gtk4"
# version = "0.9.6"
# features = ["v4_16"]
# 
# [dependencies.gtk-sys]
# package = "gtk4-sys"
# version = "0.9.6"
# features = ["v4_16"]
# 
# [dependencies.gdk]
# package = "gdk4"
# version = "0.9.6"
# features = ["v4_16"]
